# todolist-python-oop

./: .gitignore  README.md  pyproject.toml
src/todolist/: main.py
src/todolist/cli/: commands.py
src/todolist/config/: settings.py
src/todolist/models/: __init__.py  project.py  task.py
src/todolist/repositories/: __init__.py  project_repository.py  task_repository.py
src/todolist/services/: __init__.py  project_service.py  task_service.py
src/todolist/utils/: __init__.py  exceptions.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/models/: test_project.py  test_task.py
tests/unit/repositories/: test_task_repository.py
tests/unit/services/: test_task_service.py
